--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-minimal
+title: Welcome to Brandon's homepage!
+description: With this webpage I wanted to introduce myself so you can know who I am and what I'm like
